--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  location: ^4.4.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   flutter_test:
