--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -33,9 +33,9 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+ 
+  line_awesome_flutter: ^2.0.0
+
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
 
@@ -65,7 +65,8 @@ flutter:
   assets:
      - assets/images/
   #   - images/a_dot_ham.jpeg
-
+##icon_pakge
+ 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
