--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+    
+  google_fonts: ^4.0.4
+  flutter_svg: ^2.0.5 
  
   line_awesome_flutter: ^2.0.0
 
@@ -47,7 +49,7 @@ dependencies:
   comment_box: ^0.0.18
   firebase_storage: ^11.1.1
   latlong2: ^0.8.1
-
+  flutter_layout_grid: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
