--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
      - assets/images/zjgk283plvfinfa0j3Hw/
      - assets/images/4N58w1NYoXhiOHj5Ou0q/
      - assets/images/YyzCCmKyQ6ecTtH4bA6Z/
+     - assets/images/az01h51S2uEL2fsOtm7E/
      
   #   - images/a_dot_ham.jpeg
 ##icon_pakge
