--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -74,7 +74,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
+     - assets/images/yW3a44ONUJXDpiTI7jSn/
+     - assets/images/5vpF5nguMvvs1wDSmKpC/
+     - assets/images/ELuAdiju1bCHuJzYThar/
+     - assets/images/Em2N9TP5IBtWH00rUVh1/
+     - assets/images/Y8BmlH4TlsR5sT5Ey7u5/
      - assets/images/Wq4OkkQ7lThvV6B3GKjO/
      - assets/images/e4jRX05rLQeruzeII5tI/
      - assets/images/zjgk283plvfinfa0j3Hw/
