--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -75,6 +75,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/images/yW3a44ONUJXDpiTI7jSn/
+     - assets/images/o0f8OUBjoifSrZZ2RviJ/
+     - assets/images/124323/
+     - assets/images/12345431/
      - assets/images/5vpF5nguMvvs1wDSmKpC/
      - assets/images/ELuAdiju1bCHuJzYThar/
      - assets/images/Em2N9TP5IBtWH00rUVh1/
