--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -77,8 +77,8 @@ flutter:
      - assets/images/
      - assets/images/yW3a44ONUJXDpiTI7jSn/
      - assets/images/o0f8OUBjoifSrZZ2RviJ/
-     - assets/images/124323/
-     - assets/images/12345431/
+     - assets/images/kSXtBPsqSOMKgt9DPilL/
+     - assets/images/sCs34kQ0OFiRexoQj14l/
      - assets/images/5vpF5nguMvvs1wDSmKpC/
      - assets/images/ELuAdiju1bCHuJzYThar/
      - assets/images/Em2N9TP5IBtWH00rUVh1/
