missing image links

--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -89,6 +89,9 @@ flutter:
      - assets/images/4N58w1NYoXhiOHj5Ou0q/
      - assets/images/YyzCCmKyQ6ecTtH4bA6Z/
      - assets/images/az01h51S2uEL2fsOtm7E/
+     - assets/images/XnuF9ZdHQxgwyig6vsK8/
+     - assets/images/IfDyNmW9w7Ca2savgeXF/
+     - assets/images/2j5IMAAc8OGa55FWjxPh/
      
   #   - images/a_dot_ham.jpeg
 ##icon_pakge
