--- a/nomad/pubspec.yaml
+++ b/nomad/pubspec.yaml
@@ -92,6 +92,8 @@ flutter:
      - assets/images/XnuF9ZdHQxgwyig6vsK8/
      - assets/images/IfDyNmW9w7Ca2savgeXF/
      - assets/images/2j5IMAAc8OGa55FWjxPh/
+     - assets/images/eYFbpaZ8PVDyLtFzQ2FG/
+
      
   #   - images/a_dot_ham.jpeg
 ##icon_pakge
